fix: overflow on mobile

--- a/quartz/components/styles/explorer-burger.scss
+++ b/quartz/components/styles/explorer-burger.scss
@@ -85,6 +85,7 @@
   
 .no-scroll {
 	opacity: 0;
+  overflow: hidden;
 }
 
 html:has(.no-scroll) {
